--- a/src/app/customer-order/customer-order.component.html
+++ b/src/app/customer-order/customer-order.component.html
@@ -43,7 +43,7 @@
             [disabled]="!!field.disabled"
             [min]="field.min"
             [max]="field.max"
-            [placeholder]="field.placeholder"
+            [placeholder]="field.placeholder || 'Nhập ' + field.label.toLowerCase()"
             class="form-input"
             [(ngModel)]="formData[field.key]" />
 
@@ -54,6 +54,7 @@
             [name]="field.key"
             [required]="!!field.required"
             [disabled]="!!field.disabled"
+            [placeholder]="field.placeholder || 'Chọn ' + field.label.toLowerCase()"
             class="form-input"
             [(ngModel)]="formData[field.key]" />
 
@@ -64,7 +65,7 @@
             [required]="!!field.required"
             [disabled]="!!field.disabled"
             [rows]="field.rows || 3"
-            [placeholder]="field.placeholder"
+            [placeholder]="field.placeholder || 'Nhập ' + field.label.toLowerCase()"
             class="form-textarea"
             [(ngModel)]="formData[field.key]">
           </textarea>
@@ -90,7 +91,7 @@
               [name]="field.key"
               [required]="!!field.required"
               [disabled]="!!field.disabled"
-              [placeholder]="field.placeholder"
+              [placeholder]="field.placeholder || 'Tìm kiếm ' + field.label.toLowerCase()"
               class="form-input"
               [(ngModel)]="formData[field.key]" />
             <button type="button" class="form-lookup-button">
@@ -106,10 +107,10 @@
       </div>
 
       <!-- Form Actions -->
-      <div class="form-actions">
-        <button type="button" class="btn-secondary">Hủy</button>
-        <button type="button" class="btn-secondary">Lưu nháp</button>
-        <button type="submit" class="btn-primary">Lưu</button>
+       <div class="form-actions">
+        <button type="button" class="btn-modern btn-danger btn-small">Hủy</button>
+        <button type="button" class="btn-modern btn-secondary btn-small">Lưu nháp</button>
+        <button type="submit" class="btn-modern btn-success btn-small">Lưu</button>
       </div>
     </form>
 
@@ -157,6 +158,7 @@
                   [min]="field.min"
                   [max]="field.max"
                   [step]="field.step"
+                  [placeholder]="field.placeholder || field.label"
                   class="form-input w-full"
                   [(ngModel)]="row[field.key]"
                   (ngModelChange)="onDetailFieldChange(i, field.key, $event)" />
@@ -195,7 +197,7 @@
               <!-- Row actions -->
               <td>
                 <div class="row-actions">
-                  <button type="button" class="btn-delete" (click)="removeDetailRow(i)" title="Xóa">
+                  <button type="button" class="btn-modern btn-danger btn-small btn-icon" (click)="removeDetailRow(i)" title="Xóa">
                     ×
                   </button>
                 </div>
